force-app/main/default/objects/HerokuCredentials__c/HerokuCredentials__c.object-meta.xml
<CustomObject>
    <description>Used to hold logins, keys, access points for external services</description>
    <label>HerokuCredentials</label>
    <nameField>
        <label>HerokuCredentials Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HerokuCredentials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>