force-app/main/default/objects/HerokuCredentials__c/fields/AccessPoint__c.field-meta.xml
<CustomField>
    <fullName>AccessPoint__c</fullName>
    <description>Access point for Heroku service</description>
    <label>AccessPoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>