force-app/main/default/objects/HerokuCredentials__c/fields/isAutoSync__c.field-meta.xml
<CustomField>
    <fullName>isAutoSync__c</fullName>
    <defaultValue>true</defaultValue>
    <label>isAutoSync</label>
    <type>Checkbox</type>
</CustomField>