force-app/main/default/objects/HerokuCredentials__c/fields/IsFullReview__c.field-meta.xml
<CustomField>
    <fullName>IsFullReview__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Full Review</label>
    <type>Checkbox</type>
</CustomField>