force-app/main/default/objects/HerokuCredentials__c/fields/MultiService_Type__c.field-meta.xml
<CustomField>
    <fullName>MultiService_Type__c</fullName>
    <label>MultiService_Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GIT</fullName>
            </value>
            <value>
                <fullName>REVIEW</fullName>
            </value>
            <value>
                <fullName>DEPLOYMENT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>