force-app/main/default/objects/HerokuCredentials__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GIT</fullName>
                <default>true</default>
                <label>GIT</label>
            </value>
            <value>
                <fullName>REVIEW</fullName>
            </value>
            <value>
                <fullName>DEPLOYMENT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>