force-app/main/default/objects/HerokuCredentials__c/fields/Username_Resource__c.field-meta.xml
<CustomField>
    <fullName>Username_Resource__c</fullName>
    <label>Username</label>
    <length>40</length>
    <type>Text</type>
</CustomField>